# frappe_customizations

./: README.md  pyproject.toml  requirements.txt  setup.py
frappe_customizations/: hooks.py  modules.txt  patches.txt  setup.py
frappe_customizations/drive_patches/: MSOfficePreview.vue  PDFPreview.vue  __init__.py  apply_patches.py
frappe_customizations/fixtures/: .gitkeep
frappe_customizations/integrations/: __init__.py  drive_api.py  drive_connector.py
frappe_customizations/overrides/: __init__.py  example.py
frappe_customizations/patches/: __init__.py  fix_education_workspace_filter.py
frappe_customizations/public/css/: .gitkeep  custom.css
frappe_customizations/public/js/: .gitkeep
frappe_customizations/services/: document_preview.py
