[project]
name = "frappe_customizations"
version = "0.0.1"
description = "Frappe framework customizations, patches, and fixtures"
authors = [
    { name = "Frappe Accelerated", email = "admin@frappe-accelerated.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
